--- a/client/src/components/Layout/Layout.scss
+++ b/client/src/components/Layout/Layout.scss
@@ -2,22 +2,15 @@
 
 *{
     -webkit-user-drag: none;
+    margin: 0;
+    padding: 0;
 }
 
 #root{
-    @include flex($dir: column, $jc: space-between, $ai: center);
-    min-height: 100vh;
-    font-family: "Poppins", sans-serif;
-    background-color: rgba(228, 231, 233, 0.3) ;
-}
-
-.app{
-    width: 100%;
-}
-
-.container{
     max-width: 1400px;
     margin: 0 auto;
+    padding: 20px 40px;
+    background-color: $background;
 }
 
 .d-none{
@@ -25,25 +18,25 @@
 }
 
 @media screen and (max-width: 1200px) {
-    .container{
+    #root{
         max-width: 1200px;
     }
 }
 
 @media screen and (max-width: 992px) {
-    .container{
+    #root{
         max-width: 992px;
     }
 }
 
 @media screen and (max-width: 768px) {
-    .container{
+    #root{
         max-width: 768px;
     }
 }
 
 @media screen and (max-width: 576px) {
-    .container{
+    #root{
         max-width: 576px;
     }
 }
