--- a/client/src/styles/_vars.scss
+++ b/client/src/styles/_vars.scss
@@ -3,8 +3,7 @@
 $background: #FAFAFA;
 $primery: #2B2B2B;
 $secondary: #555555;
-$hover: #E3E3E3;
-$accent: #3A7AFE;
+$hover: #3A7AFE;
 $border: #F0F0F0;
 $soft:#F5F3EE;
 
