--- a/client/src/components/Logo/Logo.scss
+++ b/client/src/components/Logo/Logo.scss
@@ -1,10 +1,19 @@
 .logo{
+    position: relative;
     width: 350px;
     height: 100px;
     background-image: url('../../assets/images/logo/samolazov_logo_colorful-removebg-preview.png');
     background-size: contain;
     background-repeat: no-repeat;
     background-position: center;
+    z-index: 9999;
+}
+
+@media screen and (max-width: 992px) {
+    .logo{
+        width: 240px;
+        height: 75px;
+    }
 }
 
 @media screen and (max-width: 768px) {
