Continue layout block about

--- a/client/src/components/ui/TitleBlock/TitleBlock.scss
+++ b/client/src/components/ui/TitleBlock/TitleBlock.scss
@@ -1,5 +1,7 @@
 .title-block{
+    padding-left: 1.25em;
     font-size: 3em;
     letter-spacing: -1;
     font-weight: 500;
+    color: $primery;
 }
