--- a/client/src/components/ui/TitleBlock/TitleBlock.scss
+++ b/client/src/components/ui/TitleBlock/TitleBlock.scss
@@ -5,3 +5,17 @@
     font-weight: 500;
     color: $primery;
 }
+@media screen and (max-width: 992px) {
+    .title-block{
+        font-size: 2em;
+    }
+}
+@media screen and (max-width: 768px) {
+
+}
+
+@media screen and (max-width: 576px) {
+    .title-block{
+        font-size: 1.5em;
+    }
+}
