--- a/client/src/components/ui/Btn/Btn.scss
+++ b/client/src/components/ui/Btn/Btn.scss
@@ -7,6 +7,7 @@
     padding: 10px 30px;
     border-radius: 10px;
     transition: .1s;
+    opacity: 0.9;
     &:hover{
         background-color: $hover;
         background: linear-gradient(90deg, $hover);
