--- a/client/src/components/Footer/Footer.scss
+++ b/client/src/components/Footer/Footer.scss
@@ -32,7 +32,7 @@
 }
 @media screen and (max-width: 768px) {
     .app-footer{
-        @include flex($dir: row-reverse, $jc: center, $ai: center);
+        @include flex($dir: row, $jc: center, $ai: center);
         flex-wrap: wrap;
         margin-top: 4em;
         padding: 2.5em 10em;
@@ -62,7 +62,5 @@
     }
 }
 @media screen and (max-width: 576px) {
-    .app-footer{
-        // @include flex($dir: row-reverse, $jc: center, $ai: center);
-    }
+
 }
