--- a/client/src/pages/Blog/Blog.scss
+++ b/client/src/pages/Blog/Blog.scss
@@ -4,6 +4,10 @@
         gap: 1em;
         width: 100%;
         margin-top: 4em;
+        background-image: url('../../assets/images/footer/colorful-removebg-preview.png');
+        background-repeat: no-repeat;
+        background-position-x: 50%;
+        background-position-y: 100%;
     }
     &-item{
         @include flex($ai: flex-start);
