--- a/client/src/pages/Contacts/Contacts.scss
+++ b/client/src/pages/Contacts/Contacts.scss
@@ -1,4 +1,6 @@
 .app-contacts{
+    padding: 2.5em 0;
+    border-top: 2px solid $border;
     background-image: url('../../assets/images/footer/colorful-removebg-preview.png');
     background-repeat: no-repeat;
     background-position-x: 50%;
@@ -10,7 +12,7 @@
     &-main{
         @include flex();
         gap: 1em;
-        width: 300px;
+        width: 380px;
         padding: 1em;
     }
     &-list{
