--- a/client/src/components/ContactsForm/ContactsForm.scss
+++ b/client/src/components/ContactsForm/ContactsForm.scss
@@ -23,3 +23,15 @@
         }
     }
 }
+@media screen and (max-width: 768px) {
+    .contacts-form{
+        @include flex();
+        gap: 1em;
+        width: 100%;
+        label{
+            input, textarea{
+                width: 100%;
+            }
+        }
+    }
+}
