--- a/client/src/pages/Contacts/Contacts.scss
+++ b/client/src/pages/Contacts/Contacts.scss
@@ -1,10 +1,6 @@
 .app-contacts{
     padding: 2.5em 0;
     border-top: 2px solid $border;
-    background-image: url('../../assets/images/footer/colorful-removebg-preview.png');
-    background-repeat: no-repeat;
-    background-position-x: 50%;
-    background-position-y: 50%;
     &-wrap{
         @include flex($dir: row);
         margin-top: 4em;
@@ -14,6 +10,10 @@
         gap: 1em;
         width: 380px;
         padding: 1em;
+        background-image: url('../../assets/images/footer/colorful-removebg-preview.png');
+        background-repeat: no-repeat;
+        background-position-x: 50%;
+        background-position-y: 50%;
     }
     &-list{
         @include flex($ai: flex-start);
@@ -27,6 +27,37 @@
         }
         &__txt{
            font-size: 1.5em;
+        }
+    }
+}
+@media screen and (max-width: 768px) {
+    .app-contacts{
+        &-wrap{
+            @include flex($dir: column);
+            margin-top: 2em;
+            gap: 2em;
+        }
+        &-main{
+            @include flex($ai: flex-start);
+            width: 100%;
+            background-image: none;
+            .contacts-social{
+                display: none;
+            }
+        }
+        &-list{
+            @include flex($ai: flex-start);
+            gap: .2em;
+        }
+        &-item{
+            @include flex($dir: row);
+            gap: .5em;
+            &__img{
+                width: 24px;
+            }
+            &__txt{
+                font-size: 1.0em;
+            }
         }
     }
 }
