--- a/client/src/pages/About/About.scss
+++ b/client/src/pages/About/About.scss
@@ -33,6 +33,7 @@
     gap: 1em;
     width: 100%;
     padding: 2.5em 0;
+    margin-bottom: 4em;
     border-top: 4px solid $border;
     background-image: url('../../assets/images/footer/colorful-removebg-preview.png');
     background-repeat: no-repeat;
